# onchain-cli

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
docs/superpowers/plans/: 2026-03-14-evmcli-implementation.md
docs/superpowers/specs/: 2026-03-14-evmcli-design.md
evmcli/: Cargo.toml
evmcli/src/: cli.rs  config.rs  context.rs  errors.rs  lib.rs  main.rs
evmcli/src/commands/: abi.rs  balance.rs  bench.rs  block.rs  call.rs  code.rs  decode.rs  explorer.rs  gas.rs  logs.rs  mod.rs  nonce.rs  receipt.rs  storage.rs  trace.rs  transfers.rs  tx.rs  update.rs
evmcli/src/output/: json.rs  mod.rs  table.rs
evmcli/src/rpc/: detect.rs  mod.rs  provider.rs
src/: main.rs
src/blockscout/: mod.rs
src/rpc/: mod.rs
