[package]
name = "evmtool"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI Parsing
clap = { version = "4.4", features = ["derive", "env"] }

# EVM (Alloy)
alloy = { version = "0.1", features = ["full"] }
alloy-primitives = "0.7"
alloy-sol-types = "0.7"
alloy-json-abi = "0.7"

# Serialization & Networking
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
chrono = "0.4"
colored = "2.0"
indicatif = "0.17" # For benchmarking and progress bars

[dev-dependencies]
tokio-test = "0.4"
